# gh-runner-task-action

./: .gitignore  .pylintrc  Dockerfile  Makefile  README.md  action.yaml  catalog-info.yaml  setup.cfg  task-params-example.json  task-params-template.json
.github/workflows/: release.yaml  test_and_check.yml  test_workflow.yaml
action/: config.py  params.py  start.py  task.py
requirements/: all.txt  build.txt  check.txt  run.txt  test.txt
tests/: test_input.py  test_start.py  test_task.py  test_task_config.py
